apache mod_rewrite enabled

--- a/conf/vhost.conf
+++ b/conf/vhost.conf
@@ -6,6 +6,7 @@ ServerName localhost
     DocumentRoot "/var/www"
 
     <Directory /var/www/>
-        # Some options
+        Options Indexes FollowSymLinks
+        AllowOverride All
     </Directory>
 </VirtualHost>
