--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,47 @@
 version: '3'
 services:
+  # Apache
   www:
-    build: ./
     image: manchenkoff/server
     ports:
-      # Apache ports
       - 80:80
       - 443:443
+
+  # MySQL
+  mysql:
+    image: mysql
+    ports:
+      - 3306:3306
+    environment:
+      - MYSQL_DATABASE=test
+      - MYSQL_ROOT_PASSWORD=root
+
+  # Redis
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+
+  # Postgres server
+  postgres:
+    image: postgres
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_DB: test
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: root
+
+  # Postgres DBMS
+  adminer:
+      image: adminer
+      ports:
+        - 8080:8080
+
+  # ElasticSearch
+  elastic:
+      image: elasticsearch
+      ports:
+        - 9200:9200
