--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
     ports:
       - 80:80
       - 443:443
+    volumes:
+      - ./src:/var/www
+    links:
+      - mysql
 
   # MySQL
   mysql:
