--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     ports:
       - 80:80
       - 443:443
+    environment:
+      XDEBUG_CONFIG: remote_host=192.168.0.105 # XDebug support
     volumes:
       - ./src:/var/www
     links:
