--- a/conf/xdebug.ini
+++ b/conf/xdebug.ini
@@ -1,9 +1,11 @@
 ; /etc/php/7.2/apache2/conf.d/20-xdebug.ini
 zend_extension = xdebug.so
 
-xdebug.scream = 0
 xdebug.cli_color = 1
 xdebug.show_local_vars = 1
 xdebug.remote_enable = 1
 xdebug.remote_port = 9000
-xdebug.remote_autostart = 1
+xdebug.remote_connect_back = 0
+
+; Use setting below in IDE while connecting by Docker
+;xdebug.remote_host = host.docker.internal
