--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
   # Apache
   www:
     image: manchenkoff/server
+    build:
+      context: ./
+      dockerfile: ./docker/Dockerfile
     ports:
       - 80:80
       - 443:443
@@ -10,44 +13,3 @@ services:
       XDEBUG_CONFIG: remote_host=host.docker.internal
     volumes:
       - ./src:/var/www
-    links:
-      - mysql
-
-  # MySQL
-  mysql:
-    image: mysql
-    ports:
-      - 3306:3306
-    environment:
-      - MYSQL_DATABASE=test
-      - MYSQL_ROOT_PASSWORD=root
-
-  # Redis
-  redis:
-    image: redis
-    ports:
-      - 6379:6379
-    environment:
-      - ALLOW_EMPTY_PASSWORD=yes
-
-  # Postgres server
-  postgres:
-    image: postgres
-    ports:
-      - 5432:5432
-    environment:
-      POSTGRES_DB: test
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: root
-
-  # Postgres DBMS
-  adminer:
-      image: adminer
-      ports:
-        - 8080:8080
-
-  # ElasticSearch
-  elastic:
-      image: elasticsearch
-      ports:
-        - 9200:9200
