--- a/docker/conf/php/xdebug.ini
+++ b/docker/conf/php/xdebug.ini
@@ -7,5 +7,10 @@ xdebug.remote_enable = 1
 xdebug.remote_port = 9000
 xdebug.remote_connect_back = 0
 
+;
+; xdebug.remote_host = host.docker.internal
+;
 ; Use setting below in IDE while connecting by Docker
-;xdebug.remote_host = host.docker.internal
+;
+; environment:
+;   XDEBUG_CONFIG: remote_host=host.docker.internal
