--- a/docker/conf/apache/apache2.conf
+++ b/docker/conf/apache/apache2.conf
@@ -15,6 +15,8 @@ LogLevel warn
 
 Include ports.conf
 AccessFileName .htaccess
+ServerName localhost
+
 IncludeOptional mods-enabled/*.load
 IncludeOptional mods-enabled/*.conf
 IncludeOptional conf-enabled/*.conf
